ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Symbols/parserES5SymbolIndexer1/input.ts.stderr
error[1023]: An index signature parameter type must be either 'string' or 'number'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Symbols/parserES5SymbolIndexer1/input.ts:3:9
  |
3 |     [s: symbol]: string;
  |         ^^^^^^

